Use squid preset and pull proxy from NUTANIX_E2E_PROXY_URL
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-nutanix.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-nutanix.yaml
@@ -27,6 +27,7 @@ spec:
             username: '<< NUTANIX_USERNAME >>'
             password: '<< NUTANIX_PASSWORD >>'
             endpoint: '<< NUTANIX_ENDPOINT >>'
+            proxyURL: '<< NUTANIX_PROXY_URL >>'
             clusterName: '<< NUTANIX_CLUSTER >>'
             projectName: '<< NUTANIX_PROJECT >>'
             subnetName: '<< NUTANIX_SUBNET >>'
