Improve handling for container runtime configuration
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/userdata/ubuntu/testdata/containerd.yaml
+++ b/pkg/userdata/ubuntu/testdata/containerd.yaml
@@ -363,9 +363,7 @@ write_files:
     [plugins."io.containerd.grpc.v1.cri".registry]
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
     [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
-    endpoint = ["https://registry-1.docker.io"]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."k8s.gcr.io"]
-    endpoint = ["https://intranet.local"]
+    endpoint = ["https://k8s.gcr.io=https://intranet.local"]
     [plugins."io.containerd.grpc.v1.cri".registry.configs]
     [plugins."io.containerd.grpc.v1.cri".registry.configs."docker.io"]
     [plugins."io.containerd.grpc.v1.cri".registry.configs."docker.io".auth]
