--- a/.prow.yaml
+++ b/.prow.yaml
@@ -567,7 +567,8 @@ presubmits:
 
   - name: pull-machine-controller-e2e-nutanix
     optional: true
-    always_run: true
+    always_run: false
+    run_if_changed: "(pkg/cloudprovider/provider/nutanix/|pkg/userdata/|test/e2e/provisioning/)"
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
