refactor vSphere tests
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -32,7 +32,7 @@ spec:
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
             cluster: '<< VSPHERE_CLUSTER >>'
-            datastore: exsi-nas
+            datastore: HS-FreeNAS
             cpus: 2
             MemoryMB: 2048
             diskSizeGB: << DISK_SIZE >>
