--- a/.prow.yaml
+++ b/.prow.yaml
@@ -565,6 +565,30 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-nutanix
+    optional: true
+    always_run: false
+    run_if_changed: "(pkg/cloudprovider/provider/nutanix/|pkg/userdata/|test/e2e/provisioning/)"
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-nutanix: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.17.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestNutanixProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
   - name: pull-machine-controller-e2e-anexia
     always_run: false
     decorate: true
