--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -35,7 +35,7 @@ spec:
                 cpus: "1"
                 memory: "4096M"
                 primaryDisk:
-                  osImageURL: http://10.107.208.71/<< OS_NAME >>.img
+                  osImage: http://10.107.208.71/<< OS_NAME >>.img
                   size: "10Gi"
                   storageClassName: local-path
               dnsPolicy: "None"
