--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
@@ -31,11 +31,11 @@ spec:
             folder: '/dc-1/vm/e2e-tests'
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+            datastore: 'datastore1'
             cluster: '<< VSPHERE_CLUSTER >>'
-            datastoreCluster: 'dsc-1'
             resourcePool: 'e2e-resource-pool'
             cpus: 2
-            MemoryMB: 2048
+            MemoryMB: 4096
             diskSizeGB: << DISK_SIZE >>
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           operatingSystem: "<< OS_NAME >>"
