--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -30,9 +30,8 @@ spec:
             datacenter: 'dc-1'
             folder: '/dc-1/vm/e2e-tests'
             password: << VSPHERE_PASSWORD >>
-            # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
+            datastore: HS-FreeNAS
             cluster: '<< VSPHERE_CLUSTER >>'
-            datastore: exsi-nas
             cpus: 2
             MemoryMB: 2048
             diskSizeGB: << DISK_SIZE >>
