Logic applied only to vSphere
Signed-off-by: Mattia Lavacca <lavacca.mattia@gmail.com>

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -536,7 +536,7 @@ rules:
   - "list"
   - "get"
   - "watch"
-# volumeAttachments permissions are needed by clusters using external CSI
+# volumeAttachments permissions are needed by vsphere clusters
 - apiGroups:
   - "storage.k8s.io"
   resources:
