--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
@@ -32,12 +32,11 @@ spec:
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
             cluster: '<< VSPHERE_CLUSTER >>'
-            datastoreCluster: 'dsc-1'
+            datastore: datastore1
             resourcePool: 'e2e-resource-pool'
             cpus: 2
             MemoryMB: 2048
             diskSizeGB: << DISK_SIZE >>
-            rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
