--- a/examples/kubevirt-machinedeployment.yaml
+++ b/examples/kubevirt-machinedeployment.yaml
@@ -26,14 +26,17 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
-            storageClassName: kubermatic-fast
-            pvcSize: "10Gi"
-            sourceURL: http://10.109.79.210/<< OS_NAME >>.img
-            cpus: "1"
-            memory: "2048M"
-            kubeconfig:
-              value: '<< KUBECONFIG >>'
-            namespace: kube-system
+            auth:
+              kubeconfig:
+                value: '<< KUBECONFIG >>'
+            virtualMachine:
+              template:
+                cpus: "1"
+                memory: "2048M"
+                primaryDisk:
+                  osImage: http://10.109.79.210/<< OS_NAME >>.img
+                  size: "10Gi"
+                  storageClassName: kubermatic-fast
           # Can also be `centos`, must align with he configured registryImage above
           operatingSystem: "ubuntu"
           operatingSystemSpec:
