--- a/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
+++ b/pkg/userdata/rhel/testdata/pod-cidr-azure-rhel.yaml
@@ -2,6 +2,9 @@
 bootcmd:
 - modprobe ip_tables
 
+hostname: node1
+fqdn: node1
+
 
 ssh_pwauth: false
 
@@ -40,6 +43,7 @@ write_files:
     net.ipv4.ip_forward = 1
     vm.overcommit_memory = 1
     fs.inotify.max_user_watches = 1048576
+    fs.inotify.max_user_instances = 8192
 
 
 - path: /etc/selinux/config
@@ -68,6 +72,10 @@ write_files:
     sed -i.orig '/.*swap.*/d' /etc/fstab
     swapoff -a
 
+    hostnamectl set-hostname node1
+
+
+    yum update -y --disablerepo='*' --enablerepo='*microsoft*'
 
     yum install -y \
       device-mapper-persistent-data \
@@ -145,7 +153,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.23.0}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.22.2}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -213,12 +221,15 @@ write_files:
       --config=/etc/kubernetes/kubelet.conf \
       --network-plugin=cni \
       --cert-dir=/etc/kubernetes/pki \
-      --cloud-provider=aws \
+      --cloud-provider=azure \
       --cloud-config=/etc/kubernetes/cloud-config \
+      --hostname-override=node1 \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
       --container-runtime=docker \
       --container-runtime-endpoint=unix:///var/run/dockershim.sock \
+      --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
+      --feature-gates=DynamicKubeletConfig=true \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
@@ -227,7 +238,7 @@ write_files:
 - path: "/etc/kubernetes/cloud-config"
   permissions: "0600"
   content: |
-    {aws-config:true}
+    {config:true}
 
 - path: "/opt/bin/setup_net_env.sh"
   permissions: "0755"
