--- a/.prow.yaml
+++ b/.prow.yaml
@@ -568,7 +568,7 @@ presubmits:
   - name: pull-machine-controller-e2e-nutanix
     optional: true
     always_run: false
-    run_if_changed: "(pkg/cloudprovider/provider/nutanix/|pkg/userdata/|test/e2e/provisioning/)"
+    run_if_changed: "(pkg/cloudprovider/provider/nutanix/)"
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
