--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.21-aws.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.21-aws.yaml
@@ -1,4 +1,6 @@
 #cloud-config
+bootcmd:
+- modprobe ip_tables
 
 
 ssh_pwauth: false
@@ -67,7 +69,6 @@ write_files:
     sed -i.orig '/.*swap.*/d' /etc/fstab
     swapoff -a
 
-
     yum install -y \
       device-mapper-persistent-data \
       lvm2 \
@@ -102,7 +103,6 @@ write_files:
 
     systemctl daemon-reload
     systemctl enable --now docker
-
 
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
