--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.21-vsphere-proxy.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.21-vsphere-proxy.yaml
@@ -34,6 +34,10 @@ write_files:
     modprobe ip_vs_wrr
     modprobe ip_vs_sh
 
+    {{- /* Make sure we always disable swap - In case of a reboot or swap was enabled again'. */}}
+    sed -i.orig '/.*swap.*/d' /etc/fstab
+    swapoff -a
+
     if modinfo nf_conntrack_ipv4 &> /dev/null; then
       modprobe nf_conntrack_ipv4
     else
