--- a/pkg/userdata/centos/testdata/kubelet-v1.23-nutanix.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.23-nutanix.yaml
@@ -1,9 +1,6 @@
 #cloud-config
-bootcmd:
-- modprobe ip_tables
 
 hostname: node1
-fqdn: node1
 
 
 ssh_pwauth: false
@@ -70,8 +67,14 @@ write_files:
     systemctl restart systemd-modules-load.service
     sysctl --system
 
+
     hostnamectl set-hostname node1
 
+    source /etc/os-release
+    if [ "$ID" == "centos" ] && [ "$VERSION_ID" == "8" ]; then
+      sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+      sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+    fi
 
     yum install -y \
       device-mapper-persistent-data \
@@ -84,8 +87,10 @@ write_files:
       socat \
       wget \
       curl \
-      open-vm-tools \
+      iscsi-initiator-utils \
       ipvsadm
+    systemctl enable --now iscsid
+
 
     yum install -y yum-utils
     yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
@@ -108,6 +113,7 @@ write_files:
 
     systemctl daemon-reload
     systemctl enable --now docker
+
 
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
@@ -179,8 +185,6 @@ write_files:
     /opt/bin/setup_net_env.sh
 
     systemctl disable --now firewalld || true
-
-    systemctl enable --now vmtoolsd.service
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
 
@@ -231,7 +235,7 @@ write_files:
       --config=/etc/kubernetes/kubelet.conf \
       --network-plugin=cni \
       --cert-dir=/etc/kubernetes/pki \
-      --cloud-provider=vsphere \
+      --cloud-provider=nutanix \
       --cloud-config=/etc/kubernetes/cloud-config \
       --hostname-override=node1 \
       --exit-on-lock-contention \
@@ -442,39 +446,5 @@ write_files:
     WantedBy=multi-user.target
 
 
-- path: "/opt/bin/disable-nm-cloud-setup"
-  permissions: "0755"
-  content: |
-    #!/bin/bash
-    set -xeuo pipefail
-    if systemctl status 'nm-cloud-setup.timer' 2> /dev/null | grep -Fq "Active:"; then
-            systemctl stop nm-cloud-setup.timer
-            systemctl disable nm-cloud-setup.service
-            systemctl disable nm-cloud-setup.timer
-            reboot
-    fi
-
-- path: "/etc/systemd/system/disable-nm-cloud-setup.service"
-  permissions: "0644"
-  content: |
-    [Install]
-    WantedBy=multi-user.target
-
-    [Unit]
-    Requires=network-online.target
-    After=network-online.target
-
-    [Service]
-    Type=oneshot
-    RemainAfterExit=true
-    EnvironmentFile=-/etc/environment
-    ExecStart=/opt/bin/supervise.sh /opt/bin/disable-nm-cloud-setup
-
-rh_subscription:
-    username: ""
-    password: ""
-    auto-attach: false
-
 runcmd:
 - systemctl start setup.service
-- systemctl start disable-nm-cloud-setup.service
