--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.23-nutanix.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.23-nutanix.yaml
@@ -3,7 +3,6 @@ bootcmd:
 - modprobe ip_tables
 
 hostname: node1
-fqdn: node1
 
 
 ssh_pwauth: false
@@ -70,9 +69,8 @@ write_files:
     systemctl restart systemd-modules-load.service
     sysctl --system
 
+
     hostnamectl set-hostname node1
-
-
     yum install -y \
       device-mapper-persistent-data \
       lvm2 \
@@ -84,8 +82,11 @@ write_files:
       socat \
       wget \
       curl \
-      open-vm-tools \
+      tar \
+      iscsi-initiator-utils \
       ipvsadm
+    systemctl enable --now iscsid
+
 
     yum install -y yum-utils
     yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
@@ -179,8 +180,6 @@ write_files:
     /opt/bin/setup_net_env.sh
 
     systemctl disable --now firewalld || true
-
-    systemctl enable --now vmtoolsd.service
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
 
@@ -231,7 +230,7 @@ write_files:
       --config=/etc/kubernetes/kubelet.conf \
       --network-plugin=cni \
       --cert-dir=/etc/kubernetes/pki \
-      --cloud-provider=vsphere \
+      --cloud-provider=nutanix \
       --cloud-config=/etc/kubernetes/cloud-config \
       --hostname-override=node1 \
       --exit-on-lock-contention \
@@ -442,39 +441,5 @@ write_files:
     WantedBy=multi-user.target
 
 
-- path: "/opt/bin/disable-nm-cloud-setup"
-  permissions: "0755"
-  content: |
-    #!/bin/bash
-    set -xeuo pipefail
-    if systemctl status 'nm-cloud-setup.timer' 2> /dev/null | grep -Fq "Active:"; then
-            systemctl stop nm-cloud-setup.timer
-            systemctl disable nm-cloud-setup.service
-            systemctl disable nm-cloud-setup.timer
-            reboot
-    fi
-
-- path: "/etc/systemd/system/disable-nm-cloud-setup.service"
-  permissions: "0644"
-  content: |
-    [Install]
-    WantedBy=multi-user.target
-
-    [Unit]
-    Requires=network-online.target
-    After=network-online.target
-
-    [Service]
-    Type=oneshot
-    RemainAfterExit=true
-    EnvironmentFile=-/etc/environment
-    ExecStart=/opt/bin/supervise.sh /opt/bin/disable-nm-cloud-setup
-
-rh_subscription:
-    username: ""
-    password: ""
-    auto-attach: false
-
 runcmd:
 - systemctl start setup.service
-- systemctl start disable-nm-cloud-setup.service
