--- a/pkg/userdata/sles/testdata/vsphere.yaml
+++ b/pkg/userdata/sles/testdata/vsphere.yaml
@@ -164,6 +164,7 @@ write_files:
     Documentation=https://kubernetes.io/docs/home/
 
     [Service]
+    User=root
     Restart=always
     StartLimitInterval=0
     RestartSec=10
