--- a/pkg/userdata/amzn2/testdata/kubelet-v1.21-aws-external.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.21-aws-external.yaml
@@ -198,6 +198,7 @@ write_files:
     Documentation=https://kubernetes.io/docs/home/
 
     [Service]
+    User=root
     Restart=always
     StartLimitInterval=0
     RestartSec=10
