--- a/pkg/userdata/amzn2/testdata/kubelet-v1.21-vsphere.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.21-vsphere.yaml
@@ -205,6 +205,7 @@ write_files:
     Documentation=https://kubernetes.io/docs/home/
 
     [Service]
+    User=root
     Restart=always
     StartLimitInterval=0
     RestartSec=10
