--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.22.7.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.22.7.yaml
@@ -102,6 +102,7 @@ coreos:
       Documentation=https://kubernetes.io/docs/home/
 
       [Service]
+      User=root
       Restart=always
       StartLimitInterval=0
       RestartSec=10
