Enable importas, noctx, nolintlint linters
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -24,8 +24,11 @@ linters:
     - gofmt
     - gosimple
     - govet
+    - importas
     - ineffassign
     - misspell
+    - noctx
+    - nolintlint
     - revive
     - structcheck
     - unconvert
