Add staticcheck linter
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,6 +33,7 @@ linters:
     - predeclared
     - promlinter
     - revive
+    - staticcheck
     - structcheck
     - unconvert
     - unused
@@ -41,16 +42,17 @@ linters:
 
 issues:
   exclude:
-  - should have comment or be unexported
-  - should have comment \\(or a comment on this block\\) or be unexported
-  - func Convert_MachinesV1alpha1Machine_To_ClusterV1alpha1Machine should be ConvertMachinesV1alpha1MachineToClusterV1alpha1Machine
-  - func Convert_MachineDeployment_ProviderConfig_To_ProviderSpec should be ConvertMachineDeploymentProviderConfigToProviderSpec
-  - func Convert_MachineSet_ProviderConfig_To_ProviderSpec should be ConvertMachineSetProviderConfigToProviderSpec
-  - func Convert_Machine_ProviderConfig_To_ProviderSpec should be ConvertMachineProviderConfigToProviderSpec
-  - 'counter\.Set is deprecated: Use NewConstMetric'
-  - 'eviction\.go:221:4: the surrounding loop is unconditionally terminated'
-  - 'cyclomatic complexity 31 of func `verifyMigrateUID` is high'
-  - 'cyclomatic complexity 31 of func `main` is high'
-  - 'cyclomatic complexity 34 of func `\(\*provider\)\.getConfig` is high'
-  - 'cyclomatic complexity 31 of func `\(\*provider\)\.Validate` is high'
-  - 'cyclomatic complexity 31 of func `\(\*provider\)\.Create` is high'
+    - should have comment or be unexported
+    - should have comment \\(or a comment on this block\\) or be unexported
+    - func Convert_MachinesV1alpha1Machine_To_ClusterV1alpha1Machine should be ConvertMachinesV1alpha1MachineToClusterV1alpha1Machine
+    - func Convert_MachineDeployment_ProviderConfig_To_ProviderSpec should be ConvertMachineDeploymentProviderConfigToProviderSpec
+    - func Convert_MachineSet_ProviderConfig_To_ProviderSpec should be ConvertMachineSetProviderConfigToProviderSpec
+    - func Convert_Machine_ProviderConfig_To_ProviderSpec should be ConvertMachineProviderConfigToProviderSpec
+    - 'counter\.Set is deprecated: Use NewConstMetric'
+    - 'eviction\.go:221:4: the surrounding loop is unconditionally terminated'
+    - "cyclomatic complexity 31 of func `verifyMigrateUID` is high"
+    - "cyclomatic complexity 31 of func `main` is high"
+    - 'cyclomatic complexity 34 of func `\(\*provider\)\.getConfig` is high'
+    - 'cyclomatic complexity 31 of func `\(\*provider\)\.Validate` is high'
+    - 'cyclomatic complexity 31 of func `\(\*provider\)\.Create` is high'
+    - "SA1019: node.Spec.ConfigSource is deprecated"
