Enable nakedret linter
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,7 @@ linters:
     - importas
     - ineffassign
     - misspell
+    - nakedret
     - noctx
     - nolintlint
     - nosprintfhostport
